# ocr-xpublish

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yml
app/: app.py  main.py  serve.py
wms/: __init__.py  app.py
