[project]
name = "exapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dask>=2025.5.1",
    "icechunk>=0.2.17",
    "ipdb>=0.13.13",
    "ipython>=9.3.0",
    "mangum>=0.19.0",
    "xarray>=2025.6.1",
    "xpublish>=0.4.1",
    "xpublish-wms",
]

[tool.uv.sources]
xpublish-wms = { git = "https://github.com/carbonplan/xpublish-wms" }
